Fix coupon creation bug with invalid date format; fix z-index broken in header logo; fix fetch next users page in admin users manager

--- a/gdaypunchwebapp/gdaypunchreact/src/App.scss
+++ b/gdaypunchwebapp/gdaypunchreact/src/App.scss
@@ -34,7 +34,8 @@ code {
 .App-logo-big {
   height: 13vmin;
   pointer-events: none;
-  z-index: 1;
+  position: relative;
+  z-index: 2;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -73,6 +74,7 @@ code {
   flex-direction: column;
   position: absolute;
   animation: 0.6s ease-in 0s 1 slideInFromLeft;
+  padding-top: 3em;
 }
 
 .side-cart {
